# critvst

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-windows-installer.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SVGKnob.h
Source/DSP/: DynamicEQ.cpp  DynamicEQ.h  FaultDecimator.cpp  FaultDecimator.h  MidSideDivergence.cpp  MidSideDivergence.h  PitchDrift.cpp  PitchDrift.h  SoftLimiter.cpp  SoftLimiter.h  Waveshaper.cpp  Waveshaper.h
Source/GUIAssets/: EmbeddedAssets.h  EmbeddedFont.h
Source/Presets/: 01_Crunch_Kit.crit  02_Slam_Room.crit  04_Shimmer_Lead.crit  06_Digital_Bloom.crit  07_Pop_Squeeze.crit  08_Glitch_Diva.crit  09_Vocal_Grit.crit  12_Sub_Melt.crit
Source/Test/: test_harness.cpp
extras/: build_log.txt
extras/build-windows-x86_64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
extras/build-windows-x86_64/crit_artefacts/JuceLibraryCode/: Info.txt  crit_resources.rc
extras/build-windows-x86_64/crit_artefacts/JuceLibraryCode/Release/: Defs.txt
extras/build-windows-x86_64/crit_test_artefacts/JuceLibraryCode/: Info.txt  crit_test_resources.rc
extras/build-windows-x86_64/crit_test_artefacts/JuceLibraryCode/Release/: Defs.txt
extras/build-x86_64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  juce_vst3_helper
extras/build-x86_64/crit_artefacts/JuceLibraryCode/: Info.txt
extras/build-x86_64/crit_artefacts/JuceLibraryCode/crit_AU/: Info.plist
extras/build-x86_64/crit_test_artefacts/JuceLibraryCode/: Info.txt
extras/figma/Audio Plugin GUI Design/: README.md  index.html
extras/figma/Audio Plugin GUI Design/src/: App.tsx  index.css
extras/figma/Audio Plugin GUI Design/src/components/: RotaryKnob.tsx
extras/test/: test_harness.cpp
figma/Audio Plugin GUI Design/: package.json
figma/Audio Plugin GUI Design/src/components/: MatrixDisplay.tsx
scripts/: download_and_embed_font.sh  embed_atkinson_font.sh  installer.nsi  mingw_toolchain.cmake  package_mac.sh  package_mac_pkgs.sh  package_windows_nsis.sh  windows_cross_build.md  windows_cross_build.sh
scripts/install/: install_mac.sh  install_windows.ps1
test/: log_after_momentum_fix.txt  log_before_tuning.txt
